src/test/compile-fail/attr-bad-crate-attr.rc
// xfail-stage0
// error-pattern: expected crate directive

#[attr = "val"];
#[attr = "val"] // Unterminated
